--- a/MovieAPI/pom.xml
+++ b/MovieAPI/pom.xml
@@ -13,6 +13,12 @@
 
 	<dependencies>
 	
+		<dependency>  
+			<groupId>org.mongodb</groupId>  
+			<artifactId>mongodb-driver</artifactId>  
+			<version>3.4.2</version>  
+		</dependency>
+	
 		<dependency>
 			<groupId>org.neo4j.driver</groupId>
 			<artifactId>neo4j-java-driver</artifactId>
